네비게이션바

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,2 @@
-<div>
-  <img src="../assets/introImg/IMG_6264.JPG"/>
-  <img src="../assets/introImg/IMG_6263.JPG"/>
-  <img src="../assets/introImg/IMG_6265.JPG"/>
-  <img src="../assets/introImg/IMG_6266.JPG"/>
-</div>
-
+<app-intro></app-intro>
 
