--- a/src/app/navi/navi.component.html
+++ b/src/app/navi/navi.component.html
@@ -1,6 +1,20 @@
-<ul>
-  <li><a href="">About us</a></li>
-  <li><a href="">Menu</a></li>
-  <li><a href="">Board</a></li>
-  <li><a href="">Contact</a></li>
-</ul>
+<div>
+  <div class="page">
+    <ul>
+      <li><a href="">About us</a></li>
+      <li><a href="">Menu</a></li>
+      <li><a href="">Board</a></li>
+      <li><a href="">Contact</a></li>
+    </ul>
+  </div>
+
+  <div class="user">
+    <ul>
+      <li><a href="">Login</a></li>
+      <li><a href="">Cart</a></li>
+      <li><a href="">Acount</a></li>
+    </ul>
+  </div>
+
+</div>
+
