--- a/src/app/navi/navi.component.html
+++ b/src/app/navi/navi.component.html
@@ -1,5 +1,10 @@
 <div>
-  <div class="page">
+
+  <div class="logo">
+    <img src="././assets/introImg/logo.png">
+  </div>
+
+  <div class="page navi">
     <ul>
       <li><a href="">About us</a></li>
       <li><a href="">Menu</a></li>
@@ -8,7 +13,7 @@
     </ul>
   </div>
 
-  <div class="user">
+  <div class="user navi">
     <ul>
       <li><a href="">Login</a></li>
       <li><a href="">Cart</a></li>
