--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,9 +1,13 @@
 <div>
   <app-navi></app-navi>
-  <img src="../assets/introImg/IMG_6264.JPG"/>
-  <img src="../assets/introImg/IMG_6263.JPG"/>
-  <img src="../assets/introImg/IMG_6265.JPG"/>
-  <img src="../assets/introImg/IMG_6266.JPG"/>
+
+  <div class="intro">
+    <img src="../assets/introImg/IMG_6264.JPG"/>
+    <img src="../assets/introImg/IMG_6263.JPG"/>
+    <img src="../assets/introImg/IMG_6265.JPG"/>
+    <img src="../assets/introImg/IMG_6266.JPG"/>
+  </div>
+
 </div>
 
 
