--- a/src/app/navi/navi.component.css
+++ b/src/app/navi/navi.component.css
@@ -1,4 +1,3 @@
-
 .navi ul{
   margin: 0;
   padding: 2%;
@@ -22,18 +21,20 @@ li {
 
 .page li{
   float: left;
-  padding-right:60px;
+  padding-right:30px;
+  padding-left:30px;
 }
 
 .user li{
-  float: left;
-  padding-right: 15px;
+  float: right;
+  padding-right: 7px;
+  padding-left: 7px;
 }
 
 li a{
   display: inline;
   color: brown;
-  font-size: 17px;
+  font-size: 18px;
   text-align: center;
   text-decoration: none;
 }
@@ -41,11 +42,10 @@ li a{
 .logo img{
   position: fixed;
   bottom: 75%;
-  width: 290px;
+  width: 300px;
   height: auto;
 }
 
-/* Change the link color to #111 (black) on hover */
 li :hover {
   color: crimson;
 }
