네비게이션바 컴포넌트화, 라우팅 시작

--- a/src/app/navi/navi.component.html
+++ b/src/app/navi/navi.component.html
@@ -5,18 +5,13 @@
 
   <div class="page navi">
     <ul>
-      <li><a href="">About us</a></li>
-      <li><a href="">Menu</a></li>
-      <li><a href="">Board</a></li>
-      <li><a href="">Contact</a></li>
+      <app-page-list></app-page-list>
     </ul>
   </div>
 
   <div class="user navi">
     <ul>
-      <li><a href="">Login</a></li>
-      <li><a href="">Cart</a></li>
-      <li><a href="">Acount</a></li>
+      <app-user-page-list></app-user-page-list>
     </ul>
   </div>
 </div>
