--- a/src/app/navi/navi.component.html
+++ b/src/app/navi/navi.component.html
@@ -1,18 +1,18 @@
-<div>
+<div class="list">
   <div class="logo">
     <img src="././assets/introImg/logo.png">
   </div>
 
   <div class="page navi">
-    <ul>
+    <span> <!--ul? span?-->
       <app-page-list></app-page-list>
-    </ul>
+    </span>
   </div>
 
   <div class="user navi">
-    <ul>
+    <span>
       <app-user-page-list></app-user-page-list>
-    </ul>
+    </span>
   </div>
 </div>
 
