--- a/src/app/navi/page-list/page-list.component.css
+++ b/src/app/navi/page-list/page-list.component.css
@@ -1,3 +1,35 @@
+.page_list {
+  margin: 0;
+  padding: 0;
+  display: inline;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  font-size: 16px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  text-decoration: none;
+  display: block;
+}
+
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
 li a{
   display: inline;
   color: brown;
@@ -5,6 +37,7 @@ li a{
   text-align: center;
   text-decoration: none;
 }
+
 
 li {
   padding-top: 50px;
