--- a/src/app/navi/user-page-list/user-page-list.component.html
+++ b/src/app/navi/user-page-list/user-page-list.component.html
@@ -1,1 +1,1 @@
-<li *ngFor="let userPage of userPages"><a href="">{{userPage}}</a></li>
+<span *ngFor="let userPage of userPages"><a href="">{{userPage}}</a></span>
