--- a/src/app/navi/page-list/page-list.component.html
+++ b/src/app/navi/page-list/page-list.component.html
@@ -1,19 +1,18 @@
 <div class="page_list" *ngFor="let page of pages">
 
-  <li>
+  <span>
     <a [routerLink]="page.url" *ngIf="page.name != 'Menu'; else otherCase">
       {{page.name}}
     </a>
-  </li>
+  </span>
 
   <ng-template #otherCase>
 
     <div class="dropdown">
       <div class="dropbtn">{{page.name}}</div>
       <div class="dropdown-content">
-        <a href="#">Link1</a>
-        <a href="#">Link2</a>
-        <a href="#">Link3</a>
+        <a href="#">Cookies</a>
+        <a href="#">etc</a>
       </div>
     </div>
 
