--- a/src/app/page/intro/intro.component.html
+++ b/src/app/page/intro/intro.component.html
@@ -1,11 +1,15 @@
 <div>
   <app-navi></app-navi>
 
-  <div class="intro">
+  <div class="intro_img">
     <img src="../assets/introImg/IMG_6264.JPG"/>
     <img src="../assets/introImg/IMG_6263.JPG"/>
     <img src="../assets/introImg/IMG_6265.JPG"/>
     <img src="../assets/introImg/IMG_6266.JPG"/>
+  </div>
+
+  <div class="instagram">
+    <div class="instagram_ment">Visit Our Instargram!</div>
   </div>
 
 </div>
