--- a/src/app/navi/page-list/page-list.component.css
+++ b/src/app/navi/page-list/page-list.component.css
@@ -10,7 +10,9 @@
 }
 
 .dropbtn {
-  font-size: 16px;
+  color: brown;
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .dropdown-content {
@@ -22,18 +24,21 @@
 .dropdown-content a {
   text-decoration: none;
   display: block;
+  float: left;
+  font-size: 16px;
 }
-
 
 .dropdown:hover .dropdown-content {
   display: block;
+  color: crimson;
 }
 
 
 span a{
+  margin-right: 20px;
   display: inline;
   color: brown;
-  font-size: 18px;
+  font-size: 20px;
   text-align: center;
   text-decoration: none;
 }
@@ -41,10 +46,9 @@ span a{
 
 span {
   padding-top: 50px;
-
-  float: left;
   padding-right:30px;
   padding-left:30px;
+  float: left;
 }
 
 span :hover {
