--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-  background-color: beige;
+  background-color: white;
   padding: 0px;
   margin: 0px;
 }
