인스타그램 사진 게시 컴포넌트

--- a/src/app/page/intro/instagram-photo/instagram-photo.component.html
+++ b/src/app/page/intro/instagram-photo/instagram-photo.component.html
@@ -1,1 +1,7 @@
+<div class="first_line">
+  <span *ngFor="let img of instagram_imgs1"><img [src]="img"/></span>
+</div>
 
+<div class="second_line">
+  <span *ngFor="let img of instagram_imgs2"><img [src]="img"/></span>
+</div>
