--- a/src/app/page/intro/intro.component.html
+++ b/src/app/page/intro/intro.component.html
@@ -10,6 +10,9 @@
 
   <div class="instagram">
     <div class="instagram_ment">Visit Our Instargram!</div>
+    <div class="instagram_photo">
+      <app-instagram-photo></app-instagram-photo>
+    </div>
   </div>
 
 </div>
