--- a/src/app/page/intro/intro.component.css
+++ b/src/app/page/intro/intro.component.css
@@ -4,18 +4,16 @@
   height: auto;
 }
 .instagram{
-  border: 2px solid blue;
   width: 100%;
-  height: 600px;
+  height: 1000px;
   position: relative;
 }
 .instagram_ment {
-  border: 2px solid green;
-  font-family: sans-serif;
+  font-family: Arial;
   position: absolute;
-  top:20%;
+  top:13%;
   left:50%;
   transform: translate(-50%, -50%);
 }
 
-/*instagram의 포지션을 relative로 주고 ment 포지션을 absolute로 주니까 div 멀쩡히 먹음 왜?*/
+/*instagram의 포지션을 relative로 주고 ment 포지션을 absolute로 주니까 div 멀쩡히 먹음, 왜?*/
