--- a/src/app/page/intro/intro.component.html
+++ b/src/app/page/intro/intro.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="intro_page">
   <app-navi></app-navi>
 
   <div class="intro_img">
@@ -9,9 +9,11 @@
   </div>
 
   <div class="instagram">
-    <div class="instagram_ment">Visit Our Instargram!</div>
-    <div class="instagram_photo">
-      <app-instagram-photo></app-instagram-photo>
+    <div class="ment_photo">
+      <div class="instagram_ment">Visit Our Instargram!</div>
+      <div class="instagram_photo">
+        <app-instagram-photo></app-instagram-photo>
+      </div>
     </div>
   </div>
 
